[package]
name = "nmos-rs"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of AMWA NMOS Node supporting IS-04, IS-05, and IS-09"
license = "MIT"
authors = ["Your Name <you@example.com>"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web server & routing
axum = "0.7"                           # Web framework
tower = "0.4"                          # For middleware layers
tower-http = { version = "0.4", features = ["cors", "trace"] }

# HTTP client (for heartbeat, registration)
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization / Deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# UUIDs for node/sender/receiver IDs
uuid = { version = "1", features = ["v4", "serde"] }

# mDNS/DNS-SD advertisement (for IS-04 registry discovery)
mdns = "2.0"

# JSON Schema validation (optional)
jsonschema = "0.16"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Date/time (e.g., version timestamps)
chrono = { version = "0.4", features = ["serde"] }

# Testing
tokio-test = "0.4"
serde_yaml = "0.9"
http = "1.1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
assert-json-diff = "2.0"
name = "nmos-node"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of AMWA NMOS Node supporting IS-04, IS-05, and IS-09"
license = "MIT"
authors = ["Your Name <you@example.com>"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web server & routing
axum = "0.7"                           # Web framework
tower = "0.4"                          # For middleware layers
tower-http = { version = "0.4", features = ["cors", "trace"] }

# HTTP client (for heartbeat, registration)
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization / Deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# UUIDs for node/sender/receiver IDs
uuid = { version = "1", features = ["v4", "serde"] }

# mDNS/DNS-SD advertisement (for IS-04 registry discovery)
mdns = "2.0"

# JSON Schema validation (optional)
jsonschema = "0.16"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Date/time (e.g., version timestamps)
chrono = { version = "0.4", features = ["serde"] }

# Testing
tokio-test = "0.4"
serde_yaml = "0.9"
http = "1.1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
assert-json-diff = "2.0"

[workspace]
members = [
    "crates/is04",
    "crates/is05",
    "crates/is09",
    "crates/common",
    "crates/node-server"
    ]
]
